--- a/tharai/index.html
+++ b/tharai/index.html
@@ -40,23 +40,24 @@
         <li><a  href="contact.html">Contact Us</a></li>    
     </ul>
     <nav  class="anav-bar"  >
-        <img src="img/logo-green.svg" alt="" >   <h2 class="title" ">Tharai EduTech
-            <P class="tag-line" style="font-size: 15px;">   Empower Your Future: Code Your Way to Success!</P>
+        <img src="img/logo-green.svg" alt="" >  
+         <h2 class="title"> <span  class="title-span" >T</span>HARAI <Span class="title-span" >E</Span>DUTECH <P class="tag-line" style="font-size: 15px;">   Empower Your Future: Code Your Way to Success!</P></h2>
+                                                                
             </h2>
 
-        <div style="" class="navigation" >
+        <div class="navigation" >
           
         <ul >
             <li class="hideOnMobile"><a class="active" href="index.html">Home</a></li>
             <li class="hideOnMobile"><a  href="about.html"> About Us</a></li>
             <li class="hideOnMobile" style="display: flex;"><a  href=""></a>
-                <div class="dropdown mt-1 " id="Menu">
+                <div  class="dropdown mt-1 " id="Menu">
                     <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Courses
                     </button>
-                    <ul class="dropdown-menu" >
+                    <ul class="dropdown-menu"  >
                       <li><a class="dropdown-item" href="courses.html">All Courses</a></li>
-                      <li><a class="dropdown-item" href="fullstack.html">Full Stack Courses</a></li>
+                      <li ><a class="dropdown-item" href="fullstack.html">Full Stack Courses</a></li>
                       <li><a class="dropdown-item" href="data.html">Data Courses</a></li>
                       <li><a class="dropdown-item" href="programming.html">Programming Courses</a></li>
                       <li><a class="dropdown-item" href="database.html">Database Courses</a></li>
