--- a/tharai/programming.html
+++ b/tharai/programming.html
@@ -48,16 +48,17 @@
         <li><a  href="contact.html">Contact Us</a></li>    
     </ul>
     <nav  class="anav-bar"  >
-        <img src="img/logo-green.svg" alt="" >   <h2 class="title" ">Tharai EduTech
-            <P class="tag-line" style="font-size: 15px;">   Empower Your Future: Code Your Way to Success!</P>
+        <img src="img/logo-green.svg" alt="" >  
+         <h2 class="title"> <span  class="title-span" >T</span>HARAI <Span class="title-span" >E</Span>DUTECH <P class="tag-line" style="font-size: 15px;">   Empower Your Future: Code Your Way to Success!</P></h2>
+                                                                
             </h2>
 
-        <div style="" class="navigation" >
+        <div class="navigation" >
           
         <ul >
-            <li class="hideOnMobile"><a  href="index.html">Home</a></li>
+            <li class="hideOnMobile"><a class="active" href="index.html">Home</a></li>
             <li class="hideOnMobile"><a  href="about.html"> About Us</a></li>
-            <li class="hideOnMobile" style="display: flex;"><a class="active" href=""></a>
+            <li class="hideOnMobile" style="display: flex;"><a  href=""></a>
                 <div class="dropdown mt-1 " id="Menu">
                     <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Courses
@@ -89,8 +90,8 @@
     </section>
 
     <section id="courses">
-        <h1 data-aos="fade-up" data-aos-duration="1000">  PROGRAMMING LANGUAGES </h1>
-        <p data-aos="fade-down" data-aos-duration="1000">Programming Courses</p>
+        <h1 data-aos="fade-up" data-aos-duration="1000">  PROGRAMMING COURSES </h1>
+        <!-- <p data-aos="fade-down" data-aos-duration="1000">Programming Courses</p> -->
          <div class="course-box">
             <div data-aos="fade-right" data-aos-duration="1000" class="course" >
                 <img src="img/java.jpg" alt="" >
@@ -172,6 +173,66 @@
                 <div class="details">
                     <span>Updated 12/03/2024</span>
                     <h6> C/C++</h6>
+                </div>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <span>(145)</span>
+                </div>
+            </div>
+            <div data-aos="fade-right" data-aos-duration="1000" class="course" >
+                <img src="img/sasLogo.png" alt="">
+                <div class="details">
+                    <span>Updated 12/03/2024</span>
+                    <h6> SAS PROGRAMMING</h6>
+                </div>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <span>(145)</span>
+                </div>
+            </div>
+            <div data-aos="fade-left" data-aos-duration="1000" class="course" >
+                <img src="img/solidity.jpg" alt="">
+                <div class="details">
+                    <span>Updated 12/03/2024</span>
+                    <h6> SOLIDITY</h6>
+                </div>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <span>(145)</span>
+                </div>
+            </div>
+            <div data-aos="fade-right" data-aos-duration="1000" class="course" >
+                <img src="img/SQL.jpg" alt="" >
+                <div class="details">
+                    <span>Updated 12/03/2024</span>
+                    <h6>SQL</h6>
+                </div>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <span>(145)</span>
+                </div>
+            </div>
+            <div data-aos="fade-right" data-aos-duration="1000" class="course" >
+                <img src="img/plsql.png" alt="" >
+                <div class="details">
+                    <span>Updated 12/03/2024</span>
+                    <h6>PL SQL</h6>
                 </div>
                 <div class="star">
                     <i class="fas fa-star"></i>
